package com.codecool.employee;

public class Manager extends Employee {
}
